2023-07-15  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* configure.ac, version.h:
	Bump version to 4.01 (15 jul 2023).
	* bibtex.{c,h}, bibtex-{1,2,3}.c, utils.c, gblvars.h:
	Define "max_print_line" by function setup_bound_variable().
	* bibtex-{1,4}.c:
	Support characters defined by Unicode 15.0
	and fix the degrade at 2023-07-08.
	* bibtex-{2,3}.c, utils.c, sysdep.h:
	Allow 8-bit/Unicode file names (both on Unix/Linux and Windows).
	* tests/bibtexu-char.test: Enable test rc=16 again.
	* tests/bibtex{8,u}.test, tests/bibtex8u-mem.test,
	caseu.bbl, iscjku.bbl, testcaseu.bib, testiscjku.bib:
	Update tests.

2023-07-09  Karl Berry  <karl@freefriends.org>

	* tests/bibtexu-char.test (is.knj.str$): test fails (rc=16).

2023-07-08  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* utils.c, gblprocs.h:
	Enable to build with system ICU DLL icu.dll
	for Windows 10 version 1903 (May 2019 Update) or later.
	https://learn.microsoft.com/en-us/windows/win32/intl/international-components-for-unicode--icu-
	* bibtex-{1,4}.c:
	Enable to build with older ICU.

2023-04-12  Karl Berry  <karl@freefriends.org>

	* tests/bibtex8.test,
	* tests/bibtexu.test: use different basenames for the
	different bibtex programs. Hoping to fix report of sporadic
	failures from Werner Fink, 12 Apr 2023 12:46:56.

2023-04-10  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* tests/substr[au].bbl, tests/testsubstr.bst:
	Add more tests for substring$.

2023-01-29  Karl Berry  <karl@freefriends.org>

	* tests/bibtexu-sort.test,
	* tests/bibtexu-char.test: set LC_ALL and LANGUAGE to avoid
	locale-dependent failure. Report from Johannes Hielscher,
	tlbuild mail 29 Jan 2023 16:28:24.
	(Also minor shell portability changes.)

2022-09-12  Karl Berry  <karl@freefriends.org>

	* README: new file to mention both programs.
	* bibtex8.1: remove old addresses for Kempson and Aguilar-Sierra.

2022-09-02  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* bibtex.c:
	Initialize max_print_line after checking options.