@@ -3,6 +3,10 @@
 # Copyright 2022-2023 TANAKA Takuji <ttk@t-lab.opal.ne.jp>
 # You may freely use, modify and/or distribute this file.
 
+BinDir=${BinDir:-.}
+ExeExt=${ExeExt:-}
+_bibtexu=$BinDir/bibtexu$ExeExt
+
 test -d tests || mkdir tests
 test -d tests || exit 1
 
@@ -20,7 +24,7 @@ for loc in en az da fi tr; do
 
 ## test for sorting and change.case$
 cp $srcdir/tests/sortu.aux tests/xsortu-$loc.aux
-./bibtexu -o $loc tests/xsortu-$loc || rc=1
+$_bibtexu -o $loc tests/xsortu-$loc || rc=1
 diff $srcdir/tests/sortu-$loc.bbl tests/xsortu-$loc.bbl || rc=2
 
 done
@@ -28,7 +32,7 @@ done
 
 ## test for change.case$
 cp $srcdir/tests/caseu.aux tests/xcaseu.aux
-max_print_line=99 ./bibtexu tests/xcaseu || rc=3
+max_print_line=99 $_bibtexu tests/xcaseu || rc=3
 diff $srcdir/tests/caseu.bbl tests/xcaseu.bbl || rc=4
 
 exit $rc
