@@ -5,6 +5,10 @@
 # Copyright 2023 TANAKA Takuji <ttk@t-lab.opal.ne.jp>
 # You may freely use, modify and/or distribute this file.
 
+BinDir=${BinDir:-.}
+ExeExt=${ExeExt:-}
+_bibtexu=$BinDir/bibtexu$ExeExt
+
 test -d tests || mkdir -p tests
 
 rc=0
@@ -17,7 +21,7 @@ cp $srcdir/../web2c/tests/exampl.aux tests/uexampl.aux || rc=1
 TEXMFCNF=$srcdir/../kpathsea \
   BSTINPUTS=$srcdir/../web2c/tests \
   BIBINPUTS=$srcdir/../web2c/tests \
-  ./bibtexu -s -d all tests/uexampl || test $? = 1 || rc=2
+  $_bibtexu -s -d all tests/uexampl || test $? = 1 || rc=2
 diff $srcdir/tests/exampl.bbl tests/uexampl.bbl || rc=3
 
 
@@ -30,18 +34,18 @@ export TEXMFCNF BSTINPUTS BIBINPUTS
 
 cp $srcdir/../web2c/tests/exampl.aux tests/uex_пробный.aux || rc=4
 
-./bibtexu -s -d io tests/uex_пробный || test $? = 1 || rc=5
+$_bibtexu -s -d io tests/uex_пробный || test $? = 1 || rc=5
 diff $srcdir/tests/exampl.bbl tests/uex_пробный.bbl || rc=6
 
 
 cp $srcdir/../web2c/tests/exampl.aux tests/uex_试验.aux || rc=7
 
-./bibtexu -s -d io tests/uex_试验 || test $? = 1 || rc=8
+$_bibtexu -s -d io tests/uex_试验 || test $? = 1 || rc=8
 diff $srcdir/tests/exampl.bbl tests/uex_试验.bbl || rc=9
 
 
 ## not exist, cause fatal error
-./bibtexu -d io tests/uex_δίκη || test $? = 1 && rc=10
+$_bibtexu -d io tests/uex_δίκη || test $? = 1 && rc=10
 
 
 exit $rc
